new features, dark mode and pagination option to see more projects

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,28 +5,24 @@ const EXPERIENCIE = [
     date: "Febrero 2024 - Mayo 2024",
     title: "El portal del truque",
     description:
-      "Diseñé y desarrollé la interfaz, funcionalidad y diseño de la plataforma de intercambio online utiliozando react.js. Además, implementé el backend para la autenticación de los usuarios, lagestión de subida y descarga de imágenes utilizando Firebase, asegurando un sistema robusto y seguro para los usuarios.",
-    link: "https://truequeando.netlify.app/",
+      "Diseñé y desarrollé la interfaz, funcionalidad y diseño de la plataforma de intercambio online utilizando react.js. Además, implementé el backend para la autenticación de los usuarios, la gestión de subida y descarga de imágenes utilizando Firebase, asegurando un sistema robusto y seguro para los usuarios.",
   },
   {
     date: "Abril 2024",
     title: "Imys oficial Website",
     description:
-      " Utilicé Astro para desarrollar la interfaz de usuario, Me encargué de asegurar la compatibilidad yla experiencia de usuario en dispositivos móviles y tablets, implementando un diseño responsive para una visualización óptima en diferentes tamaños de pantalla..",
-    link: "https://github.com/easysoftwaredesignmexico/imys-officialwebsite",
+      " Utilicé Astro para desarrollar la interfaz de usuario, Me encargué de asegurar la compatibilidad yla experiencia de usuario en dispositivos móviles y tablets, implementando un diseño responsive para una visualización óptima en diferentes tamaños de pantalla.",
   },
   {
     date: "Marzo 2024",
-    title:
-      "Proyecto de Creación de Sitio Web de Streaming Internacional  -  Mis Emisoras Inc",
+    title: "Mis Emisoras Inc  - Streaming Internacional ",
     description:
-      " Utilicé Astro para desarrollar la interfaz de usuario, Me encargué de asegurar la compatibilidad yla experiencia de usuario en dispositivos móviles y tablets, implementando un diseño responsivepara una visualización óptima en diferentes tamaños de pantalla",
-    link: "https://github.com/easysoftwaredesignmexico/miemisoras-website",
+      "Desarrollé componentes específicos de la interfaz utilizando React.js para mejorar la experienciade usuario del sitio web. Colaboré en la creación y optimización de funcionalidades clave,asegurando una navegación fluida y una interacción intuitiva para los usuarios. ",
   },
 ];
 ---
 
-<ol class="relative border-s border-gray-200 ml-3">
+<ol class="relative border-s border-gray-200 ml-3 dark:border-black">
   {
     EXPERIENCIE.map((experience) => (
       <li class="mb-10 ms-4">
