--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,15 +1,16 @@
 <span
-  class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-3 py-3 rounded-full dark:bg-blue-900 dark:text-blue-300"
+  class="bg-[#3182ce] text-white text-lg font-medium me-2 px-5 py-2 rounded-full dark:bg-[#3182ce] dark:text-white hover:scale-105"
   ><slot />
 </span>
 
-
 <style>
-  @media(max-width:678px){
-  span{
-    text-align: center;
-    margin-right: 70px;
-    width: 120px;
-  }
+  @media (max-width: 678px) {
+    span {
+      font-size: 13px;
+        text-align: center;
+        margin-right: 35px;
+        width: 143px;
+        line-height: 15px;
+    }
   }
 </style>
