--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -6,7 +6,7 @@
     py-1 px-2 text-xs md:text-base
 gap-x-2 md:py-2 md:px-4
  bg-white/5 hover:scale-110
-  hover:bg-white/10 transition"
+  hover:bg-white/10 transition dark:border-black"
   {...Astro.props}
   target="_blank"
   rel="noopener noreferrer"
