update width icons stack

--- a/src/components/MiStack.astro
+++ b/src/components/MiStack.astro
@@ -51,7 +51,7 @@ const STACK = [
   {
     STACK.map(({ icon, name }) => (
       <article class="mt-10 flex flex-col items-center justify-center gap-y-2 transition-transform hover:scale-105">
-        <img src={icon} alt={name} class="w-[100px] rounded-xl" />
+        <img src={icon} alt={name} class="w-24 rounded-xl" />
         <span class="font-semibold">{name}</span>
       </article>
     ))
