--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -88,7 +88,7 @@ const PROJECTS = [
     verMas: "https://imys.mx",
   },
   {
-    title: "EL paisa comidas rapidas",
+    title: "EL Paisa comidas rapidas",
     description:
       "Es una plataforma de pedidos de comida rápida, Desarrollada con HTML, CSS y PHP,y MySQL, esta plataforma ofrece la posibilidad de registrarse, realizar pedidos y gestionarlos de manera eficiente. Con roles diferenciados entre usuarios y administradores. Esta fue desarrollada en un proyecto escolar.",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.PHP, TAGS.MYSQL],
