--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,7 +3,7 @@ import ItemExperience from "./ItemExperiencie.astro";
 const EXPERIENCIE = [
   {
     date: "Febrero 2024 - Mayo 2024",
-    title: "El portal del truque",
+    title: "El portal del trueque",
     description:
       "Diseñé y desarrollé la interfaz, funcionalidad y diseño de la plataforma de intercambio online utilizando react.js. Además, implementé el backend para la autenticación de los usuarios, la gestión de subida y descarga de imágenes utilizando Firebase, asegurando un sistema robusto y seguro para los usuarios.",
   },
