--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { description, title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="dark:bg-[#F0EFFD] dark:text-black \">
+  <body class="dark:bg-[#F0EFFD] dark:text-black">
     <Header />
     <slot />
     <Footer />
