new icon for the mode, sun and moon, and new icon for donwload cv

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,16 @@
       >Contacto</a
     >
     <button id="darkMode" class="text-xl hover:text-yellow-500">
-      <img src="./Mas/sun.png" alt="imagen para light mode" class="w-6" />
+      <img
+        src="./Mode/sun.png"
+        alt="imagen para light mode"
+        class="w-6 dark:hidden"
+      />
+      <img
+        src="./Mode/moon.png"
+        alt="Imagen para darkMode"
+        class="w-5 hidden dark:block"
+      />
       <button></button>
 
       <style>
