--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,9 @@ import MiStack from "../components/MiStack.astro";
           <Badge>Disponible para trabajar</Badge>
         </a>
       </h1>
-      <h2 class="text-xl lg:text-2xl text-wrap max-w-[700px] dark:text-customColor">
+      <h2
+        class="text-xl lg:text-2xl text-wrap max-w-[700px] dark:text-customColor"
+      >
         <span class="text-yellow-200 dark:text-[#EAB308] dark:font-semibold"
           >Soy un apasionado desarrollador frontend autodidacta</span
         >, especializado en la creación de experiencias web atractivas y
@@ -48,7 +50,7 @@ import MiStack from "../components/MiStack.astro";
           habilidades</span
         >."
       </h2>
-      <nav class="flex gap-4 flex-wrap mt-8 ">
+      <nav class="flex gap-4 flex-wrap mt-8">
         <SocialPill
           href="https://www.linkedin.com/in/mauricio-mar%C3%ADn-967a97265/"
         >
@@ -65,11 +67,7 @@ import MiStack from "../components/MiStack.astro";
           Contactame
         </SocialPill>
         <SocialPill href="./CV/cv.pdf" download>
-          <img
-            src="./CV/icon-pdf.webp"
-            alt=""
-            class="size-5 bg-white md:-size-6"
-          />
+          <img src="./CV/pdf.png" alt="" class="size-5 md:-size-6" />
           Descargar CV
         </SocialPill>
       </nav>
