Two news icon for my stack

--- a/src/components/MiStack.astro
+++ b/src/components/MiStack.astro
@@ -44,6 +44,14 @@ const STACK = [
     icon: "/Stack/firebase.webp",
     name: "FireBase",
   },
+  {
+    icon: "/Stack/mysql.webp",
+    name: "MySQL",
+  },
+  {
+    icon: "/Stack/Python.webp",
+    name: "Python",
+  },
 ];
 ---
 
