New Icon add to my stack nextj

--- a/src/components/MiStack.astro
+++ b/src/components/MiStack.astro
@@ -25,6 +25,10 @@ const STACK = [
     name: "React",
   },
   {
+    icon: "/Stack/nextjs.webp",
+    name: "Next.js",
+  },
+  {
     icon: "/Stack/astro.webp",
     name: "Astro",
   },
